--- a/config.env
+++ b/config.env
@@ -3,3 +3,8 @@ URI="mongodb+srv://Safvan:QB0U9dCAXhYekXVu@treasure-cart.k5t026a.mongodb.net/?re
 CLIENT_ID="578857453594-c2j7bvbj23u365chvbbihelp6q1tjc4h.apps.googleusercontent.com"
 CLIENT_SECRET="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"
 CLIENT_URL="http://localhost:3000"
+
+
+
+AUTH_EMAIL="treasurecart05@gmail.com"
+AUTH_PASS="nasc exwb qvui msdw"
