--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.5.2",
     "nocache": "^4.0.0",
+    "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
