--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "js-image-zoom": "^0.7.0",
     "mongoose": "^7.5.2",
     "multer": "^1.4.5-lts.1",
     "nocache": "^4.0.0",
