--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "razorpay": "^2.9.2",
+    "sharp": "^0.33.0",
     "uuid": "^9.0.1"
   }
 }
