--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "App.js",
   "scripts": {
-    "start": "nodemon --inspect App.js"
+    "start": "node App.js",
+    "start:dev": "nodemon --inspect App.js"
   },
   "keywords": [],
   "author": "SAFVAN CMC",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.676.0",
+    "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.0",
     "connect-flash": "^0.1.1",
@@ -27,12 +30,15 @@
     "moment": "^2.29.4",
     "mongoose": "^7.5.2",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nocache": "^4.0.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdfkit": "^0.14.0",
+    "puppeteer": "^21.6.0",
     "razorpay": "^2.9.2",
     "sharp": "^0.33.0",
     "uuid": "^9.0.1"
