--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.676.0",
+    "@aws-sdk/s3-request-presigner": "^3.677.0",
     "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.0",
